fixed contrast for selected menus

--- a/app/css/lc_default.css
+++ b/app/css/lc_default.css
@@ -171,6 +171,10 @@ nav {
    background: #0abfb3;
 }
 
+#menubuttonrow li:hover>a {
+    color: #000000;
+}
+
 #menubuttonrow a {
     display: block;
 }
